--- a/BotRracho V2.2
+++ b/BotRracho V2.2
@@ -34,8 +34,8 @@ ALARM_DURATION = 800  # Duración en ms
 
 # Telegram
 USE_TELEGRAM = True
-TELEGRAM_TOKEN = "7814194803:AAHVavK7juVR8V0GGFPNtN_MptNuVEdBiFQ"
-TELEGRAM_CHAT_ID = "-1002416290622"
+TELEGRAM_TOKEN = "Token"
+TELEGRAM_CHAT_ID = "Chat ID"
 
 # Rutas de los diccionarios
 TARGETS_FILE = "src/data/targets.json"
