--- a/BotRracho V2.2
+++ b/BotRracho V2.2
@@ -42,7 +42,7 @@ TARGETS_FILE = "src/data/targets.json"
 TEST_TARGETS_FILE = "src/data/test_targets.json"
 
 # Timeout y tiempo entre búsquedas
-TIMEOUT_THRESHOLD = 8  # Puedes ajustar a 8 segundos (o más) según pruebas
+TIMEOUT_THRESHOLD = 8  
 WAIT_TIME = 2
 
 # Proxies (lista de ejemplo)
